# CycleMap

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  coverage.yml
src/: 3  cycle_map.rs  double_map.rs  group_map.rs  lib.rs  multi_cycle_map.rs  optional_pair.rs  optionals.rs  partial_cycle_map.rs  raw_cycle_map.rs  raw_group_map.rs  serde.rs  utils.rs
tests/: cycle_map_tests.rs  group_map.rs  multi_cycle_map_tests.rs  optionals_tests.rs  partial_cycle_map_test.rs  partial_cycle_map_tests.rs
