[package]
name = "cycle_map"
version = "0.0.0"
edition = "2021"

authors = ["Tyler Bloom <tylerbloom2222@gmail.com>"]
license = "LGPL-3.0"

readme = "README.md"
description = "Implementations of bi-directionally accessible hashmaps"
repository = "https://github.com/TylerBloom/DoubleMap.git"

keywords = ["hashmap","map"]
categories = ["data-structures"]


[dependencies]
#ahash_ = { version = "0.7.0", default-features = false, optional = true, package = "ahash" }
hashbrown = { version = "0.12.0", default-features = false, features = ["raw", "ahash"] }
