[package]
name = "cycle_map"
version = "0.2.0"
edition = "2021"

authors = ["Tyler Bloom <tylerbloom2222@gmail.com>"]
license = "LGPL-3.0"

readme = "README.md"
description = "Implementations of bi-directionally accessible hashmaps"
repository = "https://github.com/TylerBloom/DoubleMap.git"

keywords = ["hashmap","map"]
categories = ["data-structures"]


[dependencies]
hashbrown = { version = "0.12.0", default-features = false, features = ["raw", "ahash"] }
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
serde_json = { version = "1.0" }
